# dss-coding-assignment

./: Cargo.toml  README.md
src/: api.rs  app.rs  fetcher.rs  lib.rs  main.rs  menu.rs  schema.rs  widget.rs
src/api/: image.rs  text.rs
src/app/: widget.rs
src/schema/: image.rs  text.rs
tests/: f506622c-4f75-4f87-bafe-3e08a4433914.json  home.json
