[package]
name = "dss-menu"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
fnv = "1.0"
sdl2 = { version = "0.34.3", features = ["image", "ttf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde"] }
