[package]
name = "dss-menu"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
flume = { version = "0.10.1", default-features = false, features = ["async"] }
fnv = "1.0"
futures-util = "0.3.12"
sdl2 = { version = "0.34.3", features = ["image", "ttf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tempfile = "3.2"
tokio = { version = "1.1", features = ["fs", "macros", "rt"] }
url = { version = "2.2.0", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.1", features = ["fs", "macros", "rt", "test-util"] }
